<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AzulClaro"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@+id/ptNombre"
        app:layout_constraintTop_toTopOf="@+id/ptNombre"
        tools:layout_editor_absoluteX="75dp" />

    <EditText
        android:id="@+id/ptNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introducirNombre"
        android:inputType="text"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/txApellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido1"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/ptApellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introduceApellido1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/txApellido1"
        app:layout_constraintTop_toTopOf="@+id/txApellido1"
        tools:layout_editor_absoluteX="160dp" />

    <TextView
        android:id="@+id/txApellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido2"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/ptApellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introduceApellido2"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/txApellido2"
        app:layout_constraintTop_toTopOf="@+id/txApellido2"
        tools:layout_editor_absoluteX="162dp" />

    <TextView
        android:id="@+id/txTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="269dp" />

    <EditText
        android:id="@+id/phTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introoduceTelefono"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/txTelefono"
        app:layout_constraintTop_toTopOf="@+id/txTelefono"
        tools:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/txFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="331dp" />

    <EditText
        android:id="@+id/dtFechas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introduceFecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/txFecha"
        app:layout_constraintTop_toTopOf="@+id/txFecha"
        tools:layout_editor_absoluteX="163dp" />

    <TextView
        android:id="@+id/txEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="395dp" />

    <EditText
        android:id="@+id/emEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introducirEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/txEmail"
        app:layout_constraintTop_toTopOf="@+id/txEmail"
        tools:layout_editor_absoluteX="163dp" />

    <TextView
        android:id="@+id/txContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="456dp" />

    <EditText
        android:id="@+id/psContrasenia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introducirContrasenia1"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/txContrasenia"
        app:layout_constraintTop_toTopOf="@+id/txContrasenia"
        tools:layout_editor_absoluteX="163dp" />

    <EditText
        android:id="@+id/psContrasenia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:hint="@string/introduceContrasenia2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psContrasenia1" />

    <Button
        android:id="@+id/btValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validar"
        app:layout_constraintBottom_toBottomOf="@+id/btLimpiar"
        app:layout_constraintTop_toTopOf="@+id/btLimpiar"
        tools:layout_editor_absoluteX="69dp" />

    <Button
        android:id="@+id/btLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="620dp" />

</androidx.constraintlayout.widget.ConstraintLayout>